# snake_package

./: LICENSE  README.md  pyproject.toml
src/gameshell/: __init__.py  __main__.py
src/snake/: __init__.py
