[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gameshell"
version = "2.0.0+demo"
description = "A library for making classic terminal games easily."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Ishay Weinberger" }]
license = { text = "MIT" }

[project.scripts]
snake = "gameshell:main"

[project.urls]
Homepage = "https://github.com/ARandomGuy516/snake_package"

[tool.hatch.build.targets.wheel]
packages = ["src/gameshell"]
